# osc_panel

./: CMakeLists.txt  sdkconfig  sdkconfig.defaults  使用指南.md  元器件选型.md  开题报告.doc  毕业设计中期报告_宋振豫.docx  需求.md
.claude/: settings.local.json
main/: CMakeLists.txt  adc_sampler.c  adc_sampler.h  button.c  button.h  encoder.c  encoder.h  lcd_st7789.c  lcd_st7789.h  led.c  led.h  main.c  panel_state.h  pin_config.h  uart_comm.c  uart_comm.h  waveform.c  waveform.h  wifi_log.c  wifi_log.h
tools/: docx_outline.txt  gen_arch_vsdx.py  insert_arch_image.py  inspect_docx.py
